<?xml version="1.0"?>
<package format="3">
  <name>bayes_opt_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 node that performs Bayesian Optimization and coordinates real experiments via topics.</description>

  <maintainer email="1447051860@qq.com">chrysanthemum-boy</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Optional: common test dependencies (remove if not using) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export/>
</package>
